
// Copy-paste to https://dbdiagram.io to view as an ERD 

Project renaissance {
  database_type: 'PostgreSQL'
  Note: 'Renaissance Capstone'
}

Table users {
  id uuid [pk]
  username text [unique, not null]
  name text [not null]
  email text [unique, not null]
  city text
  country_code char(2)
  avatar text 
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table projects {
  owner_id uuid [pk]
  user uuid [ref: > users.id, not null]

  name text [not null]
  description text [not null, default: '']
  is_private boolean [not null, default: false]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table project_members {
  project_id uuid [ref: > projects.owner_id, not null]
  user_id uuid [ref: > users.id, not null]

  joined_at timestamptz [not null, default: `now()`]

  indexes {
    (project_id, user_id) [pk]
  }
}

Table project_policies {
  project_id uuid [ref: > projects.owner_id, not null]
  user_id uuid [ref: > users.id, not null]
  
  allowed_path_prefix text [not null]
  can_publish boolean [not null, default: false]

  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (project_id, user_id) [pk]
  }
}
